CHANGELOG
=========
3.2.1 (2017-03-02)
------------------

* [FIXED] #4277 Fixed title and header not being set correctly on submissions and export pages


3.2.0 (2016-12-05)
------------------

* Moodle 3.2 compatible version


3.1.3 (2016-12-05)
------------------

* [FEATURE] Added presentation grade as additional grade item
* [FEATURE] #3710 Made description and name searchable
* [FEATURE] #3737 We now use regular text editor for submission feedbacks
* [FEATURE] #3610 We now use gradebook values for presentation grade and attendance if overwritten
* [FIXED] #3989 Fix overwritten presentationgrades not showing correctly in grading form
* [FIXED] #3986 Fix overwritten grades in general feedback not shown correctly
* [FIXED] #3949 Fix user count in messages related to automatic grading
* [CHANGED] #3985 Add notifications if attendances are locked/overriden while trying to set them via bulk actions
* [CHANGED] #3941 Show feedback for instances without grades
* [CHANGED] #3936 Hide grade columns if there is no grade to show and only feedback comments are active
* [CHANGED] #4011 Replace custom CSS classes for late/early/soon/etc. styling with bootstrap classes
* and various smaller bugfixes, fixed warning messages, etc.


3.1.2 (2016-10-03)
------------------

* [FIXED] #3758 Fixed old checkmark_refresh_dates() function to be compatible with 3.1.2 updates
  onwards


3.1.1 (2016-08-24)
------------------

* [FIXED] #3649 Removed accidently doubled upgrade code for attendances with lesser version number


3.1.0 (2016-07-12)
------------------

* Moodle 3.1 compatible version
* [FEATURE] #2812 Add support for attendances tracking
* [FEATURE] #3255 Save column status, sort order, etc. persistently
* [FEATURE] #2815 Improve layout for autograding & (new) attendance tracking bulk action
* [CHANGED] #3226 Rewrite table creation, harmonize tables (submission & export)
* [CHANGED] Migrate old unit test to phpunit